--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 </div>
             </div>
         </div><!-- /container -->
-    </header><!-- /Header -->
+    </header>
+    <!-- /Header -->
 
     <div class="nav_panel">
         <a href="#" class="closebt open_close_nav_panel"><i class="bi bi-x"></i></a>
@@ -93,7 +94,7 @@
                     </li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="restaurant.html">Restaurant</a></li>
-                    <li><a href="news-1.html">News & events</a></li>
+                    <li><a href="events.html">News & events</a></li>
                     <li><a href="contacts.html">Contact</a></li>
                     <li class="parent"><a href="#0">Other Pages</a>
                         <ul class="level-2">
@@ -129,7 +130,7 @@
     <!-- https://vimeo.com/874343915?share=copy -->
     <main>
         <div class="hero home-search full-height jarallax" data-jarallax-video="https://vimeo.com/875136291?share=copy"  data-speed="0.2">
-            <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.1)">
+            <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Hotel Experience</small>
                     <h3 class="slide-animated two">Welcome To Skycity<br>Luxury Japanese Hotel in Gurgaon</h3>
