--- a/gallery.html
+++ b/gallery.html
@@ -182,8 +182,8 @@
                                         <div>
                                             <small>Celebrate your valuable occasion!</small>
                                             <h3>HOTEL</h3>
-                                            <p>
-                                                Indian food is also heavily influenced by religious and cultural choices and traditions.</p>
+                                            <!-- <p>
+                                                Indian food is also heavily influenced by religious and cultural choices and traditions.</p> -->
 
                                         </div>
                                         
