updated images and servises pages

--- a/restaurant.html
+++ b/restaurant.html
@@ -18,7 +18,7 @@
     <!-- GOOGLE WEB FONT-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
     <!-- BASE CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -124,7 +124,7 @@
     <main>
         <div id="carousel-home">
             <div class="owl-carousel owl-theme kenburns">
-                <div class="owl-slide background-image cover" data-background="url(images/resturants/dinning.png)">
+                <div class="owl-slide background-image cover" data-background="url(images/resturants/dinner.jpg)">
                     <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.4)">
                         <div class="container">
                             <div class="row justify-content-center justify-content-md-start">
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <!--/owl-slide-->
-                <div class="owl-slide background-image cover" data-background="url(images/resturants/dinning.png)">
+                <div class="owl-slide background-image cover" data-background="url(images/resturants/dinner.jpg)">
                     <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.4)">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <!--/owl-slide-->
-                <div class="owl-slide background-image cover" data-background="url(images/resturants/dinning.png)">
+                <div class="owl-slide background-image cover" data-background="url(images/resturants/dinner.jpg)">
                     <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.4)">
                         <div class="container">
                             <div class="row justify-content-center justify-content-md-end">
@@ -480,7 +480,7 @@
                             </div>
                             <div id="collapse-C" class="collapse" role="tabpanel" aria-labelledby="heading-C">
                                 <div class="card-body">
-                                    <div class="banner ">
+                                    <div class="banner background-image " data-background="url(img/bbq.jpg) ">
                                         <div class="wrapper d-flex align-items-center justify-content-between opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                                             <div>
                                                 <small>SPECIAL OFFER</small>
@@ -532,7 +532,7 @@
                             </div>
                             <div id="collapse-D" class="collapse" role="tabpanel" aria-labelledby="heading-D">
                                 <div class="card-body">
-                                    <div class="banner ">
+                                    <div class="banner background-image " data-background="url(img/barbaqe.jpg) ">
                                         <div class="wrapper d-flex align-items-center justify-content-between opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.6)">
                                             <div>
                                                 <small>Celebrate your valuable occasion!</small>
