added whats Icon

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <div id="preloader">
         <div data-loader="circle-side"></div>
     </div><!-- /Page Preload -->
-
+    <a  href="https://wa.me/+91#" class="whatsapp-icon"  style="display: inline-flex; align-items: center; text-decoration: none;">
+        <img src="img/whatsapp.png" alt="WhatsApp Icon" style="vertical-align: middle;">
+        <span style="background-color: #FDC85E; margin-left: 8px; padding: 5px 10px; border-radius: 15px; color: rgb(17, 16, 16); font-weight: bold; vertical-align: middle; white-space: nowrap;">Chat with us on <br>WhatsApp</span>
+    </a>
     <div class="layer"></div><!-- Opacity Mask -->
 
     <header class="reveal_header">
@@ -199,9 +202,9 @@
             <div class="pinned-image pinned-image--medium">
                 <div class="pinned-image__container" id="section_video">
                     <video loop="loop" muted="muted" id="video_home">
-                        <source src="video/swimming_pool_2.mp4" type="video/mp4">
-                        <source src="video/swimming_pool_2.webm" type="video/webm">
-                        <source src="video/swimming_pool_2.ogv" type="video/ogg">
+                        <source src="video/Sequence.mp4" type="video/mp4">
+                        <!-- <source src="video/swimming_pool_2.webm" type="video/webm"> -->
+                        <!-- <source src="video/swimming_pool_2.ogv" type="video/ogg"> -->
                     </video>
                     <div class="pinned-image__container-overlay"></div>
                 </div>
