--- a/restaurant.html
+++ b/restaurant.html
@@ -36,6 +36,11 @@
     </div>
     <!-- /Page Preload -->
 
+    <a  href="https://wa.me/+91#" class="whatsapp-icon"  style="display: inline-flex; align-items: center; text-decoration: none;">
+        <img src="img/whatsapp.png" alt="WhatsApp Icon" style="vertical-align: middle;">
+        <span style="background-color: #FDC85E; margin-left: 8px; padding: 5px 10px; border-radius: 15px; color: rgb(17, 16, 16); font-weight: bold; vertical-align: middle; white-space: nowrap;">Chat with us on <br>WhatsApp</span>
+    </a>
+    
     <div class="layer"></div>
     <!-- Opacity Mask -->
 
