--- a/events.html
+++ b/events.html
@@ -36,6 +36,10 @@
         <div data-loader="circle-side"></div>
     </div><!-- /Page Preload -->
 
+    <a  href="https://wa.me/+91#" class="whatsapp-icon"  style="display: inline-flex; align-items: center; text-decoration: none;">
+        <img src="img/whatsapp.png" alt="WhatsApp Icon" style="vertical-align: middle;">
+        <span style="background-color: #FDC85E; margin-left: 8px; padding: 5px 10px; border-radius: 15px; color: rgb(17, 16, 16); font-weight: bold; vertical-align: middle; white-space: nowrap;">Chat with us on <br>WhatsApp</span>
+    </a>
     <div class="layer"></div><!-- Opacity Mask -->
 
     <header class="reveal_header">
@@ -139,7 +143,7 @@
                 <div class="row justify-content-center">
                     <div class="item col-xl-6 col-lg-6">
                         <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-1.jpg" alt="" class="img-fluid"></figure>
+                            <figure><img src="img/meeting_img1.jpg" alt="" class="img-fluid"></figure>
                             <div class="wrapper">
                                 <small>MEETING & EVENTS<span></span></small>
                                 <h2>Meeting & Events facilities at Skycity Gurgaon for upto 200 delegates.</h2>
@@ -149,7 +153,7 @@
                     </div>
                     <div class="item col-xl-6 col-lg-6">
                         <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-2.jpg" alt="" class="img-fluid"></figure>
+                            <figure><img src="img/meeting_img2.jpg" alt="" class="img-fluid"></figure>
                             <div class="wrapper">
                                 <small>MEETING PLANNER<span></span></small>
                                 <h2>Plan your Event & Meeting facilities at Skycity Gurgaon for upto 200 delegates.</h2>
