added whats number to whatsapp icon

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="preloader">
         <div data-loader="circle-side"></div>
     </div><!-- /Page Preload -->
-    <a  href="https://wa.me/+91#" class="whatsapp-icon"  style="display: inline-flex; align-items: center; text-decoration: none;">
+    <a  href="https://wa.me/+919582221857" class="whatsapp-icon"  style="display: inline-flex; align-items: center; text-decoration: none;">
         <img src="img/whatsapp.png" alt="WhatsApp Icon" style="vertical-align: middle;">
         <span style="background-color: #FDC85E; margin-left: 8px; padding: 5px 10px; border-radius: 15px; color: rgb(17, 16, 16); font-weight: bold; vertical-align: middle; white-space: nowrap;">Chat with us on <br>WhatsApp</span>
     </a>
@@ -622,7 +622,7 @@
                     <div class="social">
                         <ul>
                             <li><a href="#0"><i class="bi bi-instagram"></i></a></li>
-                            <li><a href="#0"><i class="bi bi-whatsapp"></i></a></li>
+                            <li><a href="https://wa.me/+919582221857"><i class="bi bi-whatsapp"></i></a></li>
                             <li><a href="#0"><i class="bi bi-facebook"></i></a></li>
                             <li><a href="#0"><i class="bi bi-twitter-x"></i></a></li>
                         </ul>
