--- a/room-list-2.html
+++ b/room-list-2.html
@@ -128,7 +128,7 @@
  
     <main>
         <div class="hero medium-height jarallax" data-jarallax data-speed="0.2">
-            <img class="jarallax-img" src="img/rooms/2.jpg" alt="">
+            <img class="jarallax-img" src="img/club-tokyo-banner.jpg" alt="">
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Hotel Experience</small>
@@ -144,7 +144,7 @@
                     <div class="col-xl-8">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
                             <div class="item">
-                                <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/1.jpg"><img src="img/rooms/1.jpg" alt=""></a>
+                                <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/1.jpg"><img src="img/club-tokyo-banner.jpg" alt=""></a>
                             </div>
                             <div class="item">
                                 <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/opt_1.jpg"><img src="img/rooms/opt_1.jpg" alt=""></a>
@@ -196,7 +196,7 @@
                     <div class="col-xl-8 order-xl-2">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
                             <div class="item">
-                                <a data-fslightbox="gallery_2" data-type="image" href="img/rooms/2.jpg"><img src="img/rooms/2.jpg" alt=""></a>
+                                <a data-fslightbox="gallery_2" data-type="image" href="img/rooms/2.jpg"><img src="img/club-tokyo-banner.jpg" alt=""></a>
                             </div>
                             <div class="item">
                                 <a data-fslightbox="gallery_2" data-type="image" href="img/rooms/opt_2.jpg"><img src="img/rooms/opt_2.jpg" alt=""></a>
