--- a/service_club_tokyo.html
+++ b/service_club_tokyo.html
@@ -130,106 +130,45 @@
     <main>
 
         <div class="hero medium-height jarallax" data-jarallax data-speed="0.2">
-            <img class="jarallax-img" src="img/meeting_event (1).png" alt="">
+            <img class="jarallax-img" src="img/club-tokyo-banner.jpg" alt="">
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Hotel Experience</small>
-                    <h1 class="slide-animated two">Club Tokyo</h1>
+                    <h1 class="slide-animated two">WELCOME TO OUR CLUB TOKYO</h1>
                 </div>
             </div>
         </div>
         <!-- /Background Img Parallax -->
 
-        <div class="container margin_120_95">
-            <h3>HEALTH CLUB GALLERY</h3>
-            <div class="isotope-wrapper">
-                <div class="row justify-content-center">
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-1.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
-                                <small>MEETING & EVENTS<span></span></small>
-                                <h2>Meeting & Events facilities at Skycity Gurgaon for upto 200 delegates.</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
+        <div class="pattern_2">
+            <div class="container margin_120_95" id="first_section">
+                <div class="row justify-content-between flex-lg-row-reverse align-items-center">
+                    <div class="col-lg-5">
+                        <div class="parallax_wrapper">
+                            <img src="img/foooood.jpg" alt="" class="img-fluid rounded-img">
+                            <div data-cue="slideInUp" class="img_over"><span data-jarallax-element="-30"><img src="img/club-tokyo-3.jpg" alt="" class="rounded-img"></span></div>
+                        </div>
                     </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-2.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
-                                <small>MEETING PLANNER<span></span></small>
-                                <h2>Plan your Event & Meeting facilities at Skycity Gurgaon for upto 200 delegates.</h2>
-                                <em>Read more</em>
+                    <div class="col-lg-5">
+                        <div class="intro">
+                            <div class="title">
+                                <!-- <small>About us</small> -->
+                                <h2>CLUB TOKYO</h2>
                             </div>
-                        </a>
+                            <p class="lead">Whatever the occasion or your palate, dining options abound at Skycity Gurgaon. Choose from Japanese, Korean, Chinese ,Thai or traditional Continental cuisines at our Gurgaon restaurants.</p>
+                            <p>Location : 8th Floor</p>
+                            <p>Cuisine : Authentic Japanese Restaurant</p>
+                            <p>Tel : +91-124-4991111 Extn:1128</p>
+                            <p><em>7 Days (18:00-24:00)</em></p>
+                        </div>
                     </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-3.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
-                                <small>Event<span></span></small>
-                                <h2>Yayoi Kusama: Infinity Mirror Rooms at Tate Modern</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-4.jpg" alt="" class="img-fluid"><em>08 Dec</em></figure>
-                            <div class="wrapper">
-                                <small>Event<span></span></small>
-                                <h2>Bix Meeting 2023</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-5.jpg" alt="" class="img-fluid"><em>11 Oct</em></figure>
-                            <div class="wrapper">
-                                <small>Guide<span></span></small>
-                                <h2>Top 15 things to do and Discover story-worthy travel moments</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-6.jpg" alt="" class="img-fluid"><em>20 Oct</em></figure>
-                            <div class="wrapper">
-                                <small>News<span></span></small>
-                                <h2>Cycling tour October 2022</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div> -->
                 </div>
-                <!--/row -->
+                <!-- /Row -->
             </div>
-            <!--/isotope-wrapper -->
-
-            <div class="pagination__wrapper">
-                <ul class="pagination">
-                    <li><a href="#0" class="prev"><i class="bi bi-arrow-left-short"></i></a></li>
-                    <li>
-                        <a href="#0" class="active">1</a>
-                    </li>
-                    <!-- <li>
-                        <a href="#0">2</a>
-                    </li>
-                    <li>
-                        <a href="#0">3</a>
-                    </li>
-                    <li>
-                        <a href="#0">4</a>
-                    </li> -->
-                    <li><a href="#0" class="next"><i class="bi bi-arrow-right-short"></i></a></li>
-                </ul>
-            </div>
-            <!-- /pagination -->
-
+            
+            <!-- /pinned content -->
         </div>
+        
         <!--/container -->
     </main>
 
