--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <li class="parent"><a href="#0">offers</a>
                         <ul class="level-2">
                             <li class="back"><a href="#0">Back</a></li>
-                            <li><a href="service_club_tokyo.html">weekend special</a></li>
+                            <li><a href="offer_weekend_special.html">weekend special</a></li>
                             <li><a href="offer_cuple_friendly.html">cupal friendly</a></li>
                             <li><a href="offer_spa_package.html">spa package</a></li>
                            
