--- a/service_healthclub.html
+++ b/service_healthclub.html
@@ -129,7 +129,7 @@
     <main>
 
         <div class="hero medium-height jarallax" data-jarallax data-speed="0.2">
-            <img class="jarallax-img" src="img/meeting_event (1).png" alt="">
+            <img class="jarallax-img" src="img/health club.jpg" alt="">
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Hotel Experience</small>
@@ -146,7 +146,7 @@
                 <div class="row justify-content-center">
                     <div class="item col-xl-4 col-lg-6">
                         <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-1.jpg" alt="" class="img-fluid"></figure>
+                            <figure><img src="img/gallery/Health Club & Spa Services/health1.png" alt="" class="img-fluid"></figure>
                             <!-- <div class="wrapper">
                                 <small>MEETING & EVENTS<span></span></small>
                                 <h2>Meeting & Events facilities at Skycity Gurgaon for upto 200 delegates.</h2>
@@ -156,7 +156,7 @@
                     </div>
                     <div class="item col-xl-4 col-lg-6">
                         <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-2.jpg" alt="" class="img-fluid"></figure>
+                            <figure><img src="img/gallery//Health Club & Spa Services/health2.png" alt="" class="img-fluid"></figure>
                             <!-- <div class="wrapper">
                                 <small>MEETING PLANNER<span></span></small>
                                 <h2>Plan your Event & Meeting facilities at Skycity Gurgaon for upto 200 delegates.</h2>
@@ -166,7 +166,7 @@
                     </div>
                     <div class="item col-xl-4 col-lg-6">
                         <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-3.jpg" alt="" class="img-fluid"></figure>
+                            <figure><img src="img/gallery//Health Club & Spa Services/health3.png" alt="" class="img-fluid"></figure>
                             <!-- <div class="wrapper">
                                 <small>Event<span></span></small>
                                 <h2>Yayoi Kusama: Infinity Mirror Rooms at Tate Modern</h2>
