--- a/service_jacuzzi.html
+++ b/service_jacuzzi.html
@@ -130,7 +130,7 @@
     <main>
 
         <div class="hero medium-height jarallax" data-jarallax data-speed="0.2">
-            <img class="jarallax-img" src="img/meeting_event (1).png" alt="">
+            <img class="jarallax-img" src="img/jacuzi.jpg" alt="">
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Hotel Experience</small>
@@ -140,95 +140,21 @@
         </div>
         <!-- /Background Img Parallax -->
 
-        <div class="container margin_120_95">
-            <h3>HEALTH CLUB GALLERY</h3>
-            <div class="isotope-wrapper">
-                <div class="row justify-content-center">
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-1.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
-                                <small>MEETING & EVENTS<span></span></small>
-                                <h2>Meeting & Events facilities at Skycity Gurgaon for upto 200 delegates.</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-2.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
-                                <small>MEETING PLANNER<span></span></small>
-                                <h2>Plan your Event & Meeting facilities at Skycity Gurgaon for upto 200 delegates.</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-3.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
-                                <small>Event<span></span></small>
-                                <h2>Yayoi Kusama: Infinity Mirror Rooms at Tate Modern</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-4.jpg" alt="" class="img-fluid"><em>08 Dec</em></figure>
-                            <div class="wrapper">
-                                <small>Event<span></span></small>
-                                <h2>Bix Meeting 2023</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-5.jpg" alt="" class="img-fluid"><em>11 Oct</em></figure>
-                            <div class="wrapper">
-                                <small>Guide<span></span></small>
-                                <h2>Top 15 things to do and Discover story-worthy travel moments</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-6.jpg" alt="" class="img-fluid"><em>20 Oct</em></figure>
-                            <div class="wrapper">
-                                <small>News<span></span></small>
-                                <h2>Cycling tour October 2022</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div> -->
+        <div class="pinned-image pinned-image--medium">
+            <div class="pinned-image__container" id="section_video">
+                <video loop="loop" muted="muted" id="video_home">
+                    <source src="video/Sequence.mp4" type="video/mp4">
+                    <!-- <source src="video/swimming_pool_2.webm" type="video/webm"> -->
+                    <!-- <source src="video/swimming_pool_2.ogv" type="video/ogg"> -->
+                </video>
+                <div class="pinned-image__container-overlay"></div>
+            </div>
+            <div class="pinned_over_content">
+                <div class="title white">
+                    <small data-cue="slideInUp" data-delay="200">Luxury Hotel Experience</small>
+                    <h2 data-cue="slideInUp" data-delay="300">Enjoy in a very<br> Immersive Relax</h2>
                 </div>
-                <!--/row -->
             </div>
-            <!--/isotope-wrapper -->
-
-            <div class="pagination__wrapper">
-                <ul class="pagination">
-                    <li><a href="#0" class="prev"><i class="bi bi-arrow-left-short"></i></a></li>
-                    <li>
-                        <a href="#0" class="active">1</a>
-                    </li>
-                    <!-- <li>
-                        <a href="#0">2</a>
-                    </li>
-                    <li>
-                        <a href="#0">3</a>
-                    </li>
-                    <li>
-                        <a href="#0">4</a>
-                    </li> -->
-                    <li><a href="#0" class="next"><i class="bi bi-arrow-right-short"></i></a></li>
-                </ul>
-            </div>
-            <!-- /pagination -->
-
         </div>
         <!--/container -->
     </main>
