--- a/service_opengarden.html
+++ b/service_opengarden.html
@@ -133,7 +133,8 @@
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Hotel Experience</small>
-                    <h1 class="slide-animated two">OPEN GARDEN BBQ</h1>
+                    <h1 class="slide-animated two">WELCOME TO OPEN GARDEN BARBEQUE
+                    </h1>
                 </div>
             </div>
         </div>
