--- a/service_spa_salon.html
+++ b/service_spa_salon.html
@@ -128,81 +128,69 @@
  
     <main>
 
-        <div class="hero medium-height jarallax" data-jarallax data-speed="0.2">
-            <img class="jarallax-img" src="img/meeting_event (1).png" alt="">
-            <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+        <div class="hero medium-height jarallax" data-jarallax data-speed="0.2" st>
+            <img class="jarallax-img" src="img/spa_banner5.png" alt="">
+            <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.4)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Hotel Experience</small>
                     <h1 class="slide-animated two">SPA SERVICES</h1>
                 </div>
             </div>
         </div>
+        <!-- <div class="owl-slide background-image cover" data-background="url(img/spa lady.jpg)">
+            <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.4)">
+                <div class="container">
+                    <div class="row justify-content-center justify-content-md-start">
+                        <div class="col-lg-6 static">
+                            <div class="slide-text white">
+                                <small class="owl-slide-animated owl-slide-title">Restaurant Experience</small>
+                                <h2 class="owl-slide-animated owl-slide-title-2">A unique experience where to eat</h2>
+                                <div class="owl-slide-animated owl-slide-title-3"><a class="btn_1 outline white mt-3" href="#first_section">Read more</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
         <!-- /Background Img Parallax -->
 
         <div class="container margin_120_95">
-            <h3>HEALTH CLUB GALLERY</h3>
+            <h3>Standard Features</h3>
+            <p>Our spa has been carefully designed to satisfy the curiosity of the first-time spa-goer as well as exceed the expectations of the well-travelled connoisseur. Our fully air-conditioned therapy rooms are well-appointed and designed to rejuvenate, relax and pamper you. We offer a selection of the choicest therapies from across the world. All our therapists are professionally qualified and specially trained to give our guests an outstanding spa-experience.</p>
+            <p>The in-house SPA has a facility of Jacuzzi, you're going to love easing into the five person Hydro-Pressure Massage Jets and 12 Air Pressure Jets. You can easily say, "It's the perfect hot tub for your family's recreation area." The HydrOasis 5000 Hot Tub combines relaxation, soothing sound, and visually stimulation light effects into a single Hot Tub. The most enduring power of heat. there are several benefits associated with their use. Muscle Relaxation, Increased Heart Rate, Increased Sweating, Mental State and Increased Metabolism.</p>
             <div class="isotope-wrapper">
                 <div class="row justify-content-center">
                     <div class="item col-xl-4 col-lg-6">
                         <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-1.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
+                            <figure><img src="img/spa lady7.jpg" alt="" class="img-fluid"></figure>
+                            <!-- <div class="wrapper">
                                 <small>MEETING & EVENTS<span></span></small>
                                 <h2>Meeting & Events facilities at Skycity Gurgaon for upto 200 delegates.</h2>
                                 <em>Read more</em>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
                     <div class="item col-xl-4 col-lg-6">
                         <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-2.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
+                            <figure><img src="img/spa1.2.jpg" alt="" class="img-fluid"></figure>
+                            <!-- <div class="wrapper">
                                 <small>MEETING PLANNER<span></span></small>
                                 <h2>Plan your Event & Meeting facilities at Skycity Gurgaon for upto 200 delegates.</h2>
                                 <em>Read more</em>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
                     <div class="item col-xl-4 col-lg-6">
                         <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-3.jpg" alt="" class="img-fluid"></figure>
-                            <div class="wrapper">
+                            <figure><img src="img/spa3.jpg" alt="" class="img-fluid"></figure>
+                            <!-- <div class="wrapper">
                                 <small>Event<span></span></small>
                                 <h2>Yayoi Kusama: Infinity Mirror Rooms at Tate Modern</h2>
                                 <em>Read more</em>
-                            </div>
+                            </div> -->
                         </a>
                     </div>
-                    <!-- <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-4.jpg" alt="" class="img-fluid"><em>08 Dec</em></figure>
-                            <div class="wrapper">
-                                <small>Event<span></span></small>
-                                <h2>Bix Meeting 2023</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-5.jpg" alt="" class="img-fluid"><em>11 Oct</em></figure>
-                            <div class="wrapper">
-                                <small>Guide<span></span></small>
-                                <h2>Top 15 things to do and Discover story-worthy travel moments</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item col-xl-4 col-lg-6">
-                        <a href="meeting_events.html" class="box_contents" data-cue="slideInUp">
-                            <figure><img src="img/blog-6.jpg" alt="" class="img-fluid"><em>20 Oct</em></figure>
-                            <div class="wrapper">
-                                <small>News<span></span></small>
-                                <h2>Cycling tour October 2022</h2>
-                                <em>Read more</em>
-                            </div>
-                        </a>
-                    </div> -->
+                    
                 </div>
                 <!--/row -->
             </div>
