--- a/index.html
+++ b/index.html
@@ -237,15 +237,14 @@
                 <div class="col-lg-7">
                     <div class="row_list_version_3" data-cue="fadeIn">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
-                            <div class="item">
-                                <a href="room_single_deluxe_room.html"><img src="img/rooms/sigle_dulex_room/deluxe-single-room-n.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
+                            
+                            <div class="item active">
                                 <a href="room_single_deluxe_room.html"><img src="img/rooms/sigle_dulex_room/single-deluxe-room.jpg" alt=""></a>
                             </div>
-                            <div class="item">
-                                <a href="room_single_deluxe_room.html"><img src="img/rooms/sigle_dulex_room/deluxe-single-room-n-1-bathroom (1).jpg" alt=""></a>
-                            </div>
+                            <!-- <div class="item">
+                                <a href="room_single_deluxe_room.html"><img src="img/rooms/sigle_dulex_room/single-dulex-room.jpg" alt=""></a>
+                            </div> -->
+
                         </div>
                         <!-- /carousel -->
                         <div class="box_item_info" data-jarallax-element="-30">
@@ -269,14 +268,14 @@
                     <div class="row_list_version_3" data-cue="fadeIn">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
                             <div class="item">
-                                <a href="room_deluxe.html"><img src="img/rooms/dulex_room/deluxe-double-room-n-1-enterance.jpg" alt=""></a>
+                                <a href="room_deluxe.html"><img src="img/rooms/dulex_room/room1.jpg" alt=""></a>
                             </div>
-                            <div class="item">
+                            <!-- <div class="item">
                                 <a href="room_deluxe.html"><img src="img/rooms/dulex_room/deluxe-double-room-n.jpg" alt=""></a>
                             </div>
                             <div class="item">
                                 <a href="room_deluxe.html"><img src="img/rooms/dulex_room/skycity-deluxe-room.jpg" alt=""></a>
-                            </div>
+                            </div> -->
                         </div>
                         <!-- /carousel -->
                         <div class="box_item_info" data-jarallax-element="-30">
@@ -299,12 +298,12 @@
                     <!-- /row_list_version_3 -->
                     <div class="row_list_version_3" data-cue="fadeIn">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
-                            <div class="item">
+                            <!-- <div class="item">
                                 <a href="room_executive.html"><img src="img/rooms/Executive_room/deluxe-double-room-n-1-enterance.jpg" alt=""></a>
                             </div>
                             <div class="item">
                                 <a href="room_executive.html"><img src="img/rooms/Executive_room/deluxe-double-room-n.jpg" alt=""></a>
-                            </div>
+                            </div> -->
                             <div class="item">
                                 <a href="room_executive.html"><img src="img/rooms/Executive_room/skycity-deluxe-room.jpg" alt=""></a>
                             </div>
@@ -330,9 +329,9 @@
                     <!-- /row_list_version_3 -->
                     <div class="row_list_version_3" data-cue="fadeIn">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
-                            <div class="item">
+                            <!-- <div class="item">
                                 <a href="room_premier.html"><img src="img/rooms/premier_suites/premier-suite-n.jpg" alt=""></a>
-                            </div>
+                            </div> -->
                             <div class="item">
                                 <a href="room_premier.html"><img src="img/rooms/premier_suites/premier-suite.jpg" alt=""></a>
                             </div>
@@ -362,14 +361,14 @@
                     <div class="row_list_version_3" data-cue="fadeIn">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
                             <div class="item">
-                                <a href="room_royal.html"><img src="img/rooms/premier_suites/premier-suite-n.jpg" alt=""></a>
+                                <a href="room_royal.html"><img src="img/rooms/royal_suite/4.jpg" alt=""></a>
                             </div>
-                            <div class="item">
+                            <!-- <div class="item">
                                 <a href="room_royal.html"><img src="img/rooms/premier_suites/premier-suite.jpg" alt=""></a>
                             </div>
                             <div class="item">
                                 <a href="room_royal.html"><img src="img/rooms/premier_suites/premier-suite.jpg" alt=""></a>
-                            </div>
+                            </div> -->
                         </div>
                         <!-- /carousel -->
                         <div class="box_item_info" data-jarallax-element="-30">
