--- a/room-list-1.html
+++ b/room-list-1.html
@@ -128,7 +128,7 @@
  
     <main>
 
-        <div class="hero medium-height jarallax" data-jarallax data-speed="0.2">
+        <!-- <div class="hero medium-height jarallax" data-jarallax data-speed="0.2">
             <img class="jarallax-img" src="img/rooms/4.jpg" alt="">
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
@@ -136,7 +136,7 @@
                     <h1 class="slide-animated two">Our Rooms & Suites</h1>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- /Background Img Parallax -->
 
         <div class="container margin_120_95 pb-0" id="first_section">
