--- a/banquet.html
+++ b/banquet.html
@@ -144,8 +144,8 @@
                     </div>
                 </div>
                 <!--/owl-slide-->
-                <div class="owl-slide background-image cover" data-background="url(img/weddings/1.jpg)">
-                    <!--<div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                <!-- <div class="owl-slide background-image cover" data-background="url(img/weddings/1.jpg)">
+                    <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-6 static">
@@ -157,11 +157,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>-->
-                </div>
+                    </div>
+                </div> -->
                 <!--/owl-slide-->
-                <div class="owl-slide background-image cover" data-background="url(img/weddings/2.jpg)">
-                    <!--<div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.6)">
+                <!-- <div class="owl-slide background-image cover" data-background="url(img/weddings/2.jpg)">
+                    <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.6)">
                         <div class="container">
                             <div class="row justify-content-center justify-content-md-end">
                                 <div class="col-lg-6 static">
@@ -173,11 +173,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>-->
-                </div>
+                    </div>
+                 </div> -->
                     <!--/owl-slide-->
-                    <div class="owl-slide background-image cover" data-background="url(img/weddings/3.jpg)">
-                        <!--<div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.6)">
+                    <!-- <div class="owl-slide background-image cover" data-background="url(img/weddings/3.jpg)">
+                        <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.6)">
                             <div class="container">
                                 <div class="row justify-content-center">
                                     <div class="col-lg-6 static">
@@ -189,10 +189,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>-->
-                    </div>
+                        </div>
+                    </div> -->
                 </div>
-            </div>
+            
             <div class="mouse_wp">
                 <a href="#first_section" class="btn_scrollto">
                     <div class="mouse"></div>
