--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <ul class="level-2">
                             <li class="back"><a href="#0">Back</a></li>
                             <li><a href="offer_weekend_special.html">weekend special</a></li>
-                            <li><a href="offer_cuple_friendly.html">cupal friendly</a></li>
+                            <li><a href="offer_couple_friendly.html">cupal friendly</a></li>
                             <li><a href="offer_spa_package.html">spa package</a></li>
                            
                         </ul>
@@ -257,7 +257,7 @@
                                         <i class="customicon-double-bed"></i> King Size Bed
                                     </li>
                                     <li>
-                                        <i class="customicon-television"></i> 32 Inc TV
+                                        <i class="customicon-television"></i> 42 Inc TV
                                     </li>
                                 </ul>
                             </div>
@@ -288,7 +288,7 @@
                                         <i class="customicon-double-bed"></i> King Size Bed
                                     </li>
                                     <li>
-                                        <i class="customicon-television"></i> 32 Inc TV
+                                        <i class="customicon-television"></i> 42 Inc TV
                                     </li>
                                 </ul>
                             </div>
@@ -319,7 +319,7 @@
                                         <i class="customicon-double-bed"></i> King Size Bed
                                     </li>
                                     <li>
-                                        <i class="customicon-television"></i> 32 Inc TV
+                                        <i class="customicon-television"></i> 42 Inc TV
                                     </li>
                                 </ul>
                             </div>
@@ -350,7 +350,7 @@
                                         <i class="customicon-double-bed"></i> King Size Bed
                                     </li>
                                     <li>
-                                        <i class="customicon-television"></i> 32 Inc TV
+                                        <i class="customicon-television"></i> 42 Inc TV
                                     </li>
                                 </ul>
                             </div>
@@ -381,7 +381,7 @@
                                         <i class="customicon-double-bed"></i> King Size Bed
                                     </li>
                                     <li>
-                                        <i class="customicon-television"></i> 32 Inc TV
+                                        <i class="customicon-television"></i> 42 Inc TV
                                     </li>
                                 </ul>
                             </div>
