--- a/room_royal.html
+++ b/room_royal.html
@@ -265,10 +265,10 @@
     </main>
 
     <footer class="revealed">
-        <div class="footer_bg">
+        <!-- <div class="footer_bg">
             <div class="gradient_over"></div>
             <div class="background-image" data-background="url(img/footer.jpeg)"></div>
-        </div>
+        </div> -->
         <div class="container">
             <div class="row move_content">
                 <div class="col-lg-4 col-md-12">
@@ -294,7 +294,7 @@
                     <div class="social">
                         <ul>
                             <li><a href="#0"><i class="bi bi-instagram"></i></a></li>
-                            <li><a href="#0"><i class="bi bi-whatsapp"></i></a></li>
+                            <li><a href="https://wa.me/+919582221857"><i class="bi bi-whatsapp"></i></a></li>
                             <li><a href="#0"><i class="bi bi-facebook"></i></a></li>
                             <li><a href="#0"><i class="bi bi-twitter-x"></i></a></li>
                         </ul>
@@ -337,7 +337,6 @@
         </div>
     </footer>
     <!-- /footer -->
-
    
     <div class="progress-wrap">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
