--- a/service_cityclub.html
+++ b/service_cityclub.html
@@ -484,10 +484,10 @@
     </main>
 
     <footer class="revealed">
-        <div class="footer_bg">
+        <!-- <div class="footer_bg">
             <div class="gradient_over"></div>
             <div class="background-image" data-background="url(img/footer.jpeg)"></div>
-        </div>
+        </div> -->
         <div class="container">
             <div class="row move_content">
                 <div class="col-lg-4 col-md-12">
@@ -513,7 +513,7 @@
                     <div class="social">
                         <ul>
                             <li><a href="#0"><i class="bi bi-instagram"></i></a></li>
-                            <li><a href="#0"><i class="bi bi-whatsapp"></i></a></li>
+                            <li><a href="https://wa.me/+919582221857"><i class="bi bi-whatsapp"></i></a></li>
                             <li><a href="#0"><i class="bi bi-facebook"></i></a></li>
                             <li><a href="#0"><i class="bi bi-twitter-x"></i></a></li>
                         </ul>
