--- a/restaurant.html
+++ b/restaurant.html
@@ -129,7 +129,7 @@
     <main>
         <div id="carousel-home">
             <div class="owl-carousel owl-theme kenburns">
-                <div class="owl-slide background-image cover" data-background="url(images/resturants/dinner.jpg)">
+                <div class="owl-slide background-image cover" data-background="url(img/weddings/4.jpg)">
                     <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.4)">
                         <div class="container">
                             <div class="row justify-content-center justify-content-md-start">
