--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- demo video link  https://vimeo.com/360765915  -->
     <!-- https://vimeo.com/874343915?share=copy -->
     <main>
-        <div class="hero home-search full-height jarallax" data-jarallax-video="https://vimeo.com/881612931?share=copy"  data-speed="0.2">
+        <div class="hero home-search full-height jarallax" data-jarallax-video="https://vimeo.com/881641620?share=copy"  data-speed="0.2">
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.2)">
                 <div class="container">
                     <!-- <small class="slide-animated one">Luxury Hotel Experience</small>
@@ -522,7 +522,7 @@
                     </div>
                 </div>
                 <!--/row -->
-                <p class="text-end"><a href="news-1.html" class="btn_1 outline mt-2" data-cue="slideInUp" data-delay="600">View all News</a></p>
+                <!-- <p class="text-end"><a href="news-1.html" class="btn_1 outline mt-2" data-cue="slideInUp" data-delay="600">View all News</a></p> -->
             </div>
             <!--/container -->
         </div>
