--- a/offer_spa_package.html
+++ b/offer_spa_package.html
@@ -140,22 +140,22 @@
                     <div class="col-xl-8">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
                             <div class="item">
-                                <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/1.jpg"><img src="img/club-tokyo-banner.jpg" alt=""></a>
+                                <a data-fslightbox="gallery_1" data-type="image" href="#img/rooms/1.jpg"><img src="img/offer/spa-package (1).jpg" alt=""></a>
                             </div>
                             <div class="item">
-                                <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/opt_1.jpg"><img src="img/rooms/opt_1.jpg" alt=""></a>
+                                <a data-fslightbox="gallery_1" data-type="image" href="#img/rooms/opt_1.jpg"><img src="img/rooms/opt_1.jpg" alt=""></a>
                             </div>
                             <div class="item">
-                                <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/opt_8.jpg"><img src="img/rooms/opt_8.jpg" alt=""></a>
+                                <a data-fslightbox="gallery_1" data-type="image" href="#img/rooms/opt_8.jpg"><img src="img/rooms/opt_8.jpg" alt=""></a>
                             </div>
                         </div>
                         <!-- /carousel -->
                     </div>
                     <div class="col-xl-4">
                         <div class="box_item_info" data-jarallax-element="-25">
-                            <small>From $150/night</small>
-                            <h2>Double Room</h2>
-                            <p>Beautiful design with modern furnishings including a glamorous bay window with your own private view of Lucerne.</p>
+                            <!-- <small>From $150/night</small> -->
+                            <h2>SPA PACKAGE</h2>
+                            <p>Our spa has been carefully designed to satisfy the curiosity of the first-time spa-goer as well as exceed the expectations of the well-travelled connoisseur. Our fully air-conditioned therapy rooms are well-appointed and designed to rejuvenate, relax and pamper you.</p>
                             <div class="facilities clearfix">
                                 <ul>
                                     <li>
@@ -192,7 +192,7 @@
                     <div class="col-xl-8 order-xl-2">
                         <div class="owl-carousel owl-theme carousel_item_1 kenburns rounded-img">
                             <div class="item">
-                                <a data-fslightbox="gallery_2" data-type="image" href="img/rooms/2.jpg"><img src="img/club-tokyo-banner.jpg" alt=""></a>
+                                <a data-fslightbox="gallery_2" data-type="image" href="#img/rooms/2.jpg"><img src="img/offer/spa-package (1).jpg" alt=""></a>
                             </div>
                             <div class="item">
                                 <a data-fslightbox="gallery_2" data-type="image" href="img/rooms/opt_2.jpg"><img src="img/rooms/opt_2.jpg" alt=""></a>
