--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
     <!-- demo video link  https://vimeo.com/360765915  -->
     <!-- https://vimeo.com/874343915?share=copy -->
     <main>
-        <div class="hero home-search full-height jarallax" data-jarallax-video="https://vimeo.com/882886520?share=copy"  data-speed="0.2">
+        <div class="hero home-search full-height jarallax" data-jarallax-video="https://vimeo.com/883889553?share=copy"  data-speed="0.2">
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.2)">
                 <div class="container">
-                    <!-- <small class="slide-animated one">Luxury Hotel Experience</small>
-                    <h3 class="slide-animated two">Welcome To Skycity<br>Luxury Japanese Hotel in Gurgaon</h3> -->
+                    <small class="slide-animated one">Luxury Hotel Experience</small>
+                    <h3 class="slide-animated two">Welcome To Skycity<br>Luxury Japanese Hotel in Gurgaon</h3>
                     <div class="row justify-content-center slide-animated three">
                         <div class="col-xl-10">
                             <!-- <div class="row g-0 booking_form">
