--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="nav_panel">
         <a href="#" class="closebt open_close_nav_panel"><i class="bi bi-x"></i></a>
-        <div class="logo_panel"><img src="images/logo_new.png" class="logo_panel_img" alt=""></div>
+        <div class="logo_panel"><img src="images/logo-new1.2.png" class="logo_panel_img" alt=""></div>
         <div class="sidebar-navigation">
             <nav>
                 <ul class="level-1">
@@ -130,10 +130,10 @@
     <!-- https://vimeo.com/874343915?share=copy -->
     <main>
         <div class="hero home-search full-height jarallax" data-jarallax-video="https://vimeo.com/883889553?share=copy"  data-speed="0.2">
-            <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.2)">
+            <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.4)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Hotel Experience</small>
-                    <h3 class="slide-animated two">Welcome To Skycity<br>Luxury Japanese Hotel in Gurgaon</h3>
+                    <h3 class="slide-animated two">Welcome To Skycity<br>Luxury Hotel in Gurgaon</h3>
                     <div class="row justify-content-center slide-animated three">
                         <div class="col-xl-10">
                             <!-- <div class="row g-0 booking_form">
