--- a/room_royal.html
+++ b/room_royal.html
@@ -46,8 +46,8 @@
         <div class="container">
             <div class="row align-items-center">
                  <div class="col-6">
-                        <a href="index.html" ><img src="images/logo_new.png" class="logo_normal" alt=""></a>
-                        <a href="index.html"><img src="images/logo_new.png" class="logo_sticky" alt=""></a>
+                        <a href="index.html" ><img src="images/logo-new1.2.png" class="logo_normal" alt=""></a>
+                        <a href="index.html"><img src="images/logo-new1.2.png" class="logo_sticky" alt=""></a>
                 </div>
                 <div class="col-6">
                     <nav>
@@ -69,7 +69,7 @@
 
     <div class="nav_panel">
         <a href="#" class="closebt open_close_nav_panel"><i class="bi bi-x"></i></a>
-        <div class="logo_panel"><img src="images/logo_new.png" class="logo_panel_img" alt=""></div>
+        <div class="logo_panel"><img src="images/logo-new1.2.png" class="logo_panel_img" alt=""></div>
         <div class="sidebar-navigation">
             <nav>
                 <ul class="level-1">
